# SingleApplication

./: CMakeLists.txt  singleapplication.cpp  singleapplication.h  singleapplication_p.h
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/calculator/: CMakeLists.txt
examples/sending_arguments/: CMakeLists.txt
